test/tests/good/cast-poly.carth
;; 420

(import std)

(defun foo/to-int [a] (: (cast a) Int))

(def main
  (display (show-int (+ (foo/to-int (: 400.20     F64))
                        (foo/to-int (: (cast 20) Nat))))))
