test/tests/bad/cast-mono.carth
;; NoClassInstance

(defun foo [a] :of (Fun [Int] (Box Nat8))
  (cast a))
